# AI-Engineer

./: .env.example  .gitignore  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile  ENV_SETUP.md  INSTALLATION.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh  validate_env.py
.github/workflows/: ci.yml  dependency-check.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  phase-01-plans.md  phase-02-plans.md  phase-03-plans.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
01-environment-setup/: README.md
02-python-fundamentals/: README.md  mypy.ini
02-python-fundamentals/exercises/: 01-ai-components.py  01-async-api-calls.py  01-document-chunking.py  01-multi-env-setup.py  01-openai-models.py  01-rest-client.py  01-robust-api-client.py  02-config-validation.py  02-logging-setup.py  02-rate-limited-async.py  03-retry-logic.py
02-python-fundamentals/notebooks/: 01-async-basics.ipynb  01-classes-decorators.ipynb  01-exception-handling.ipynb  01-file-io-json.ipynb  (+11 more)
03-ai-fundamentals-openai/: README.md
04-open-source-ai-safety/: MODULE_COMPLETION.md  README.md
05-embeddings-vector-databases/: MODULE_COMPLETION.md  README.md
06-rag-systems/: MODULE_COMPLETION.md  README.md
07-ai-agents/: README.md
08-multimodal-ai/: README.md
09-testing-validation/: README.md
10-documentation-portfolio/: README.md
docs/: CI_CD.md  COST_TRACKING.md  DOCKER_SETUP.md  LITELLM-GUIDE.md  PHASE_2_COMPLETION.md  SETUP_GUIDE.md  TROUBLESHOOTING.md
utils/: __init__.py  api_helpers.py  cost_tracker.py  litellm_helpers.py  validation.py
(+82 files in other folders)
